# textile-erp-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC-ERP.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_tenancy_foundation.py  002_fabric_mill.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py
backend/app/api/v1/endpoints/fabric/: __init__.py  lot_rolls.py  lots.py  rolls.py  summary.py
backend/app/core/: config.py  database.py  dependencies.py  permissions.py  security.py
backend/app/core/middleware/: tenancy.py
backend/app/models/: base.py  fabric.py  subscription.py  tenant.py
backend/app/schemas/: auth.py  fabric.py
backend/app/services/: fabric_service.py  tenant_service.py
backend/app/tests/: conftest.py  test_tenancy_isolation.py
frontend/: Dockerfile  package-lock.json  package.json  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/fabric-lots/: page.tsx
frontend/src/app/(dashboard)/fabric-lots/[lotId]/: page.tsx
frontend/src/app/(dashboard)/fabric-rolls/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/services/: fabricService.ts
frontend/src/types/: index.ts
